--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="container mt-5">
-    <h1>Welcome to the Home page</h1>
-    <a href="/signup" class="btn btn-primary">Sign Up</a>
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body class="">
+    <nav class="navbar navbar-expand-lg">
+      <div class="main-nav-cont">
+        <a class="navbar-brand" href="#">
+          <img
+            src="https://miva.university/wp-content/uploads/2023/05/Miva-Logo-White-Horizontal-1.png"
+            class="attachment-full size-full wp-image-19818"
+            alt=""
+            width="200"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon" style="filter: invert(1)"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Programs</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div>
+      <a href="/signup" style="height: 100%; ">
+        <marquee behavior="scroll" direction="left">
+          Click here to apply now!
+        </marquee>
+      </a>
+    </div>
+    <div class="hero">
+      <h1>Welcome to <br> Miva Open University</h1>
+      <p>Empowering minds, shaping the future.</p>
+      <a href="#" class="btn btn-light">Learn More</a>
+    </div>
+
+    <div class="container my-5">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <h3>Quality Education</h3>
+          <p>
+            We offer world-class programs designed to equip you with the skills
+            you need.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h3>Flexible Learning</h3>
+          <p>
+            Learn at your own pace with our flexible online learning system.
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h3>Global Community</h3>
+          <p>
+            Join a vibrant community of learners and educators from around the
+            world.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p>&copy; 2025 Miva Open University. All Rights Reserved.</p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
