--- a/templates/index.html
+++ b/templates/index.html
@@ -34,13 +34,13 @@
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Programs</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Signup</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <div>
-      <a href="/signup" style="height: 100%; ">
+      <a href="/templates/signup.html" style="height: 100%; ">
         <marquee behavior="scroll" direction="left">
           Click here to apply now!
         </marquee>
