--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Programs</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Signup</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Signup</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Signup</a></li>
           </ul>
         </div>
